# microbit-jacdac-discovery

./: CMakeLists.txt  codal.json
source/: main.cpp
utils/cmake/toolchains/ARM_GCC/: bin-generator.cmake  hex-generator.cmake  size-info.cmake
